...
    string
  >;
}

interface State {
  numberOfContactShown: number;
  contactName: Array<string>;
  contactEmail: Array<string>;
  username: Array<string>;
  firstContactNameHasError: boolean;
  firstContactEmailHasError: boolean;
  firstUsernameHasError: boolean;
  secondContactNameHasError: boolean;
  secondContactEmailHasError: boolean;
  secondUsernameHasError: boolean;
...
    } = this.state;

    return (
      <NavigationContext.Consumer>
        {({ toggleIsFirstTime }) => {
          return (
            <SafeAreaView style={{ flex: 1 }} testID="setupScreen">
              <ScrollView
                contentContainerStyle={styles.container}
                keyboardShouldPersistTaps="handled"
                testID="scrollView">
                <KeyboardAvoidingView
                  behavior="padding"
                  keyboardVerticalOffset={30}>
                  <CustomText
                    text={
                      'Who would you want to inform when in distress?\n\nAn email with your current location is going to be sent to the contacts provided.'
...
                    }
                    onSubmitContactEmail={() =>
                      firstUsernameInput._root.focus()
                    }
                    usernameRef={username => (firstUsernameInput = username)}
                    autoFocus
                    testID="firstContact"
                  />

                  {numberOfContactShown > 1 ? (
                    <ContactDetails
                      style={{ bottom: secondWrapper }}
                      onContactEmailChange={email =>
...
                        secondContactEmail._root.focus()
                      }
                      onSubmitContactEmail={() =>
                        secondUsernameInput._root.focus()
                      }
                      usernameRef={username => (secondUsernameInput = username)}
                      testID="secondContact"
                    />
                  ) : null}

                  {numberOfContactShown > 2 ? (
                    <>
                      <ContactDetails
...
                        usernameRef={username =>
                          (thirdUsernameInput = username)
                        }
                        onSubmitUsername={() =>
                          this.saveContacts(toggleIsFirstTime)
                        }
                        testID="thirdContact"
                      />
                      <CustomButton
                        text="Save"
                        onPress={() => this.saveContacts(toggleIsFirstTime)}
                        style={styles.button}
                        testID="saveButton"
                      />
                    </>
                  ) : null}
                </KeyboardAvoidingView>
              </ScrollView>

              <Fab
                style={styles.fab}
                onPress={this.handleFabPress}
                testID="fab">
                <CustomText text={'\u002B'} style={styles.plusIcon} />
              </Fab>
            </SafeAreaView>
          );
        }}
      </NavigationContext.Consumer>
...
