...
  notFirstTime: boolean;
}

export type AppStackParams = {
  WelcomeScreen: undefined;
  SignupScreen: undefined;
  HomeScreen: {
    contacts?: string | Contact;
    fromEdit?: boolean;
    showModal?: boolean;
  };
  EditContactScreen: undefined;
  SetupScreen: undefined;
...
